Fixed hover on mobile

--- a/_includes/scss/breakpoints.scss
+++ b/_includes/scss/breakpoints.scss
@@ -4,3 +4,4 @@ $tablet:        "screen and (min-width: 768px) and (max-width: 959px)";
 $desktop-sm:    "screen and (min-width: 960px) and (max-width: 1280px)";
 $desktop:       "screen and (min-width: 1281px) and (max-width: 1919px)";
 $desktop-xl:    "screen and (min-width: 1920px)";
+$all-desktop:   "screen and (min-width: 960px)";
